package _03_MultiPlayerGameEventSystem;

public interface Eventable {
    public String  getEventType();
}
