package _03_MultiPlayerGameEventSystem;

public interface GameEventListener {
    public void handle(Eventable event);
}
